// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputChoiceSet inputChoiceSetCheckboxMultiSelect should be rendered correctly 1`] = `
<div
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-Checkbox is-checked is-enabled root-135"
      >
        <input
          checked=""
          class="input-136"
          data-ktp-execute-target="true"
          id="checkbox-10"
          type="checkbox"
        />
        <label
          class="ms-Checkbox-label label-137"
          for="checkbox-10"
        >
          <div
            class="ms-Checkbox-checkbox checkbox-138"
            data-ktp-target="true"
          >
            <i
              aria-hidden="true"
              class="ms-Checkbox-checkmark checkmark-141"
              data-icon-name="CheckMark"
            >
              
            </i>
          </div>
          <span
            class="ms-Checkbox-text text-140"
          >
            Red
          </span>
        </label>
      </div>
      <div
        class="ms-Checkbox is-enabled root-142"
      >
        <input
          class="input-136"
          data-ktp-execute-target="true"
          id="checkbox-11"
          type="checkbox"
        />
        <label
          class="ms-Checkbox-label label-137"
          for="checkbox-11"
        >
          <div
            class="ms-Checkbox-checkbox checkbox-143"
            data-ktp-target="true"
          >
            <i
              aria-hidden="true"
              class="ms-Checkbox-checkmark checkmark-145"
              data-icon-name="CheckMark"
            >
              
            </i>
          </div>
          <span
            class="ms-Checkbox-text text-140"
          >
            Green
          </span>
        </label>
      </div>
      <div
        class="ms-Checkbox is-checked is-enabled root-146"
      >
        <input
          checked=""
          class="input-136"
          data-ktp-execute-target="true"
          id="checkbox-12"
          type="checkbox"
        />
        <label
          class="ms-Checkbox-label label-137"
          for="checkbox-12"
        >
          <div
            class="ms-Checkbox-checkbox checkbox-138"
            data-ktp-target="true"
          >
            <i
              aria-hidden="true"
              class="ms-Checkbox-checkmark checkmark-141"
              data-icon-name="CheckMark"
            >
              
            </i>
          </div>
          <span
            class="ms-Checkbox-text text-140"
          >
            Blue
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputChoiceSet inputChoiceSetChoiceGroup should be rendered correctly 1`] = `
<div
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-ChoiceFieldGroup root-127"
      >
        <div
          role="radiogroup"
        >
          <div
            class="ms-ChoiceFieldGroup-flexContainer"
          >
            <div
              class="ms-ChoiceField root-128"
            >
              <div
                class="ms-ChoiceField-wrapper"
              >
                <input
                  class="ms-ChoiceField-input input-129"
                  id="ChoiceGroup4-1"
                  name="ChoiceGroup4"
                  type="radio"
                />
                <label
                  class="ms-ChoiceField-field field-130"
                  for="ChoiceGroup4-1"
                >
                  <span
                    class="ms-ChoiceFieldLabel"
                    id="ChoiceGroupLabel5-1"
                  >
                    Red
                  </span>
                </label>
              </div>
            </div>
            <div
              class="ms-ChoiceField root-128"
            >
              <div
                class="ms-ChoiceField-wrapper"
              >
                <input
                  class="ms-ChoiceField-input input-129"
                  id="ChoiceGroup4-2"
                  name="ChoiceGroup4"
                  type="radio"
                />
                <label
                  class="ms-ChoiceField-field field-130"
                  for="ChoiceGroup4-2"
                >
                  <span
                    class="ms-ChoiceFieldLabel"
                    id="ChoiceGroupLabel5-2"
                  >
                    Green
                  </span>
                </label>
              </div>
            </div>
            <div
              class="ms-ChoiceField root-128"
            >
              <div
                class="ms-ChoiceField-wrapper"
              >
                <input
                  class="ms-ChoiceField-input input-129"
                  id="ChoiceGroup4-3"
                  name="ChoiceGroup4"
                  type="radio"
                />
                <label
                  class="ms-ChoiceField-field field-130"
                  for="ChoiceGroup4-3"
                >
                  <span
                    class="ms-ChoiceFieldLabel"
                    id="ChoiceGroupLabel5-3"
                  >
                    Blue
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputChoiceSet inputChoiceSetComboBox should be rendered correctly 1`] = `
<div
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-ComboBox-container "
      >
        <div
          class="ms-ComboBox css-109"
          data-ktp-target="true"
          id="ComboBox0wrapper"
        >
          <input
            aria-autocomplete="both"
            aria-expanded="false"
            autocapitalize="off"
            autocomplete="off"
            class="ms-ComboBox-Input css-110"
            data-is-interactable="true"
            data-ktp-execute-target="true"
            data-lpignore="true"
            id="ComboBox0-input"
            role="combobox"
            spellcheck="false"
            style="font-family: inherit;"
            type="text"
            value="Red"
          />
          <button
            class="ms-Button ms-Button--icon ms-ComboBox-CaretDown-button root-117"
            data-is-focusable="false"
            tabindex="-1"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-118"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-105 css-126 ms-Button-icon icon-120"
                data-icon-name="ChevronDown"
                style="font-family: "FabricMDL2Icons";"
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputChoiceSet inputChoiceSetComboBoxMultiSelect should be rendered correctly 1`] = `
<div
  style="display: flex; flex-direction: column; box-sizing: border-box; flex: 0 0 auto;"
>
  <div
    class="ac-input-container"
    style="display: flex;"
  >
    <div
      style="width: 100%; min-width: 0px;"
    >
      <div
        class="ms-ComboBox-container "
      >
        <div
          class="ms-ComboBox css-109"
          data-ktp-target="true"
          id="ComboBox6wrapper"
        >
          <input
            aria-autocomplete="both"
            aria-expanded="false"
            autocapitalize="off"
            autocomplete="off"
            class="ms-ComboBox-Input css-110"
            data-is-interactable="true"
            data-ktp-execute-target="true"
            data-lpignore="true"
            id="ComboBox6-input"
            role="combobox"
            spellcheck="false"
            style="font-family: inherit;"
            type="text"
            value="Red"
          />
          <button
            class="ms-Button ms-Button--icon ms-ComboBox-CaretDown-button root-117"
            data-is-focusable="false"
            tabindex="-1"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-118"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-105 css-126 ms-Button-icon icon-120"
                data-icon-name="ChevronDown"
                style="font-family: "FabricMDL2Icons";"
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
